updated index.html with Silk artwork and link

--- a/index.html
+++ b/index.html
@@ -243,7 +243,10 @@
       <a href="https://drmarkreuter.github.io/branchesAlbum/" target="_blank">Branches</a>
     </th>
     <th>
-      
+      <h4 class='branch'>Silk</h4>
+      <a href="https://drmarkreuter.github.io/labyrinthElevenAlbum/" target="_blank"><img class='wordart' src='images/silk-album-warm2-1400x1400.png' width='300px'></a>
+      <br>
+      <a href="https://drmarkreuter.github.io/labyrinthElevenAlbum/" target="_blank">Silk</a>
     </th>
   </tr>
 </table>
