correcting link to Silk

--- a/index.html
+++ b/index.html
@@ -244,9 +244,9 @@
     </th>
     <th>
       <h4 class='branch'>Silk</h4>
-      <a href="https://drmarkreuter.github.io/labyrinthElevenAlbum/" target="_blank"><img class='wordart' src='images/silk-album-warm2-1400x1400.png' width='300px'></a>
+      <a href="https://drmarkreuter.github.io/silkAlbum/" target="_blank"><img class='wordart' src='images/silk-album-warm2-1400x1400.png' width='300px'></a>
       <br>
-      <a href="https://drmarkreuter.github.io/labyrinthElevenAlbum/" target="_blank">Silk</a>
+      <a href="https://drmarkreuter.github.io/silkAlbum/" target="_blank">Silk</a>
     </th>
   </tr>
 </table>
